# any-gold

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  pytest_and_linting.yaml  release.yaml  test_and_linting.yaml  test_release.yaml
any_gold/: __init__.py
any_gold/image/: deepglobe.py  ham10000.py  isic2018.py  isic2018_segmentation.py  kpi.py  mvtec_ad.py  pascal_voc.py  plantseg.py
any_gold/tools/image/: connected_component.py  fiftyone_conversion.py  stats.py  utils.py
any_gold/utils/: dataset.py  hugging_face.py  kaggle.py  load.py  synapse.py  zenodo.py
exotic_gold/image/: plantseg.py
exotic_gold/utils/: zenodo.py
tests/: conftest.py
tests/image/: test_deepglobe.py  test_ham10000.py  test_isic2018_segmentation.py  test_kpi.py  test_mvtecad.py  test_pascal_voc.py  test_plantseg.py
tests/tools/image/: test_connected_component.py  test_fiftyone_conversion.py  test_stats.py  test_utils.py
tests/utils/: test_dataset.py
