[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any-gold"
version = "0.1.0"
description = "Custom PyTorch Dataset implementations for publicly available datasets across various modalities"
readme = "README.md"
license = "Apache-2.0"
license-files= ["LICENSE"]
requires-python = ">=3.8"
authors = [
    {name = "goldener-data", email = "yann.chene.tni@gmail.com"},
]

dependencies = [
    "torch",
    "torchvision",
    "pathlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "mypy",
  "pandas-stubs",
]

huggingface = [
    "datasets[vision]",
]
zenodo = [
  "zenodo-client",
]

synapse = [
  "synapseclient",
]

[project.urls]
Homepage = "https://github.com/goldener-data/any-gold"
Repository = "https://github.com/goldener-data/any-gold"
Issues = "https://github.com/goldener-data/any-gold/issues"
